--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   get-num-square:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-18.04
   
     name: Returns the number square
     steps:
